--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="A todo list app made with React and Krypton for authentication" />
   <link rel="stylesheet" href="%PUBLIC_URL%/fontawesome.min.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
