--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="A todo list app made with React and Krypton for authentication" />
+  <meta name="description" content="React To-Do list made with Krypton for authentication" />
   <link rel="stylesheet" href="%PUBLIC_URL%/fontawesome.min.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Krypton Todo List</title>
+  <title>Krypton To-Do List</title>
 </head>
 
 <body>
